# gcc-hid

./: com.gcc.conf  pyproject.toml  readme.md
ble_hid/: README.md  __main__.py  constants.py  demo.py  exceptions.py  utils.py
ble_hid/api/: api.py  keyboard.py  keymap.py  mouse.py
ble_hid/bluez/: __init__.py  advertisement.py  agent.py  application.py  gatt.py
ble_hid/hid/: __init__.py  report_map.py  services.py
src/gcc/: __init__.py  constants.py  exception.py  gcc.py  keyboard.py  mouse.py
src/gcc_hid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: enable_disable.py  mouse.py
